--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -13,10 +13,10 @@ stages:
   is_completed: true
 - id: 665
   step: 10596
-  is_completed: false
+  is_completed: true
 - id: 666
   step: 10597
-  is_completed: false
+  is_completed: true
 - id: 667
   step: 10598
   is_completed: false
